--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "jest-environment-jsdom": "^30.0.2",
     "jest-preset-angular": "~15.0.0",
     "jest-util": "^30.0.2",
+    "nx-electron": "^21.0.1",
     "prettier": "^2.6.2",
     "ts-jest": "^29.4.0",
     "tslib": "^2.3.0",
