add electron app

--- a/apps/frontend-gui/project.json
+++ b/apps/frontend-gui/project.json
@@ -57,7 +57,10 @@
           "buildTarget": "frontend-gui:build:development"
         }
       },
-      "defaultConfiguration": "development"
+      "defaultConfiguration": "development",
+      "options": {
+        "proxyConfig": "apps/frontend-gui/proxy.conf.json"
+      }
     },
     "extract-i18n": {
       "executor": "@angular/build:extract-i18n",
