--- a/package.json
+++ b/package.json
@@ -2,7 +2,17 @@
   "name": "@electron-app/source",
   "version": "0.0.0",
   "license": "MIT",
-  "scripts": {},
+  "scripts": {
+    "postinstall": "electron-builder install-app-deps",
+    "nxe:build:frontend": "nx build frontend-gui",
+    "nxe:build:backend": "nx build electron-gui",
+    "nxe:serve:frontend": "nx serve frontend-gui",
+    "nxe:serve:backend": "nx serve electron-gui",
+    "nxe:test:frontend": "nx test frontend-gui",
+    "nxe:test:backend": "nx test electron-gui",
+    "nxe:package:app": "nx run electron-gui:make --prepackageOnly",
+    "nxe:make:app": "nx run electron-gui:make"
+  },
   "private": true,
   "dependencies": {
     "@angular/common": "~20.1.0",
@@ -41,16 +51,19 @@
     "@types/node": "18.16.9",
     "@typescript-eslint/utils": "^8.29.0",
     "angular-eslint": "^20.0.0",
+    "electron": "^34.5.6",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^10.0.0",
     "eslint-plugin-playwright": "^1.6.2",
     "jest": "^30.0.2",
     "jest-environment-jsdom": "^30.0.2",
+    "jest-environment-node": "^30.0.2",
     "jest-preset-angular": "~15.0.0",
     "jest-util": "^30.0.2",
     "nx-electron": "^21.0.1",
     "prettier": "^2.6.2",
     "ts-jest": "^29.4.0",
+    "ts-node": "10.9.1",
     "tslib": "^2.3.0",
     "typescript": "~5.8.2",
     "typescript-eslint": "^8.29.0"
