--- a/apps/frontend-gui/project.json
+++ b/apps/frontend-gui/project.json
@@ -7,6 +7,7 @@
   "tags": [],
   "targets": {
     "build": {
+      "bashHref": "./",
       "executor": "@angular/build:application",
       "outputs": ["{options.outputPath}"],
       "options": {
@@ -47,6 +48,7 @@
       "defaultConfiguration": "production"
     },
     "serve": {
+      "bashHref": "./",
       "continuous": true,
       "executor": "@angular/build:dev-server",
       "configurations": {
