--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/router": "~20.1.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
+    "react-router-dom": "6.29.0",
     "rxjs": "~7.8.0",
     "zone.js": "~0.15.0"
   },
@@ -34,6 +35,8 @@
     "@angular/cli": "~20.1.0",
     "@angular/compiler-cli": "~20.1.0",
     "@angular/language-service": "~20.1.0",
+    "@babel/core": "^7.14.5",
+    "@babel/preset-react": "^7.14.5",
     "@eslint/js": "^9.8.0",
     "@nx/angular": "21.3.11",
     "@nx/devkit": "21.3.11",
@@ -44,20 +47,30 @@
     "@nx/playwright": "21.3.11",
     "@nx/react": "^21.3.11",
     "@nx/web": "21.3.11",
+    "@nx/webpack": "21.3.11",
     "@nx/workspace": "21.3.11",
     "@playwright/test": "^1.36.0",
+    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.7",
     "@schematics/angular": "~20.1.0",
+    "@svgr/webpack": "^8.0.1",
     "@swc-node/register": "~1.9.1",
+    "@swc/cli": "~0.6.0",
     "@swc/core": "~1.5.7",
     "@swc/helpers": "~0.5.11",
     "@types/jest": "^30.0.0",
-    "@types/node": "18.16.9",
+    "@types/node": "^20.0.0",
+    "@types/react": "19.0.0",
+    "@types/react-dom": "19.0.0",
     "@typescript-eslint/utils": "^8.29.0",
     "angular-eslint": "^20.0.0",
     "electron": "^34.5.6",
     "eslint": "^9.8.0",
     "eslint-config-prettier": "^10.0.0",
+    "eslint-plugin-import": "2.31.0",
+    "eslint-plugin-jsx-a11y": "6.10.1",
     "eslint-plugin-playwright": "^1.6.2",
+    "eslint-plugin-react": "7.35.0",
+    "eslint-plugin-react-hooks": "5.0.0",
     "jest": "^30.0.2",
     "jest-environment-jsdom": "^30.0.2",
     "jest-environment-node": "^30.0.2",
@@ -65,10 +78,12 @@
     "jest-util": "^30.0.2",
     "nx-electron": "^21.0.1",
     "prettier": "^2.6.2",
+    "react-refresh": "^0.10.0",
     "ts-jest": "^29.4.0",
     "ts-node": "10.9.1",
     "tslib": "^2.3.0",
     "typescript": "~5.8.2",
-    "typescript-eslint": "^8.29.0"
+    "typescript-eslint": "^8.29.0",
+    "webpack-cli": "^5.1.4"
   }
 }
